# LocalSearch

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp  Board.cpp  Board.hpp  main.cpp
